# galfus

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  DEMO.md  ENHANCE.md  EVENTS.md  README.md  SYSTEMS.md  THIRD-PARTY-LICENSES.md  TODO.md  package.json
crates/galfus-bindings-lua/: Cargo.toml
crates/galfus-bindings-lua/src/: lib.rs
crates/galfus-bindings-napi/: Cargo.toml
crates/galfus-bindings-napi/src/: lib.rs
crates/galfus-bindings-python/: Cargo.toml
crates/galfus-bindings-python/src/: lib.rs
crates/galfus-bindings-wasm/: Cargo.toml
crates/galfus-bindings-wasm/src/: lib.rs
crates/galfus-input/: Cargo.toml
crates/galfus-input/src/: gamepad_tests.rs  keycodes_tests.rs  lib.rs  lib_tests.rs
crates/galfus-platform/: Cargo.toml
crates/galfus-platform/src/: bootstrap_tests.rs  browser.rs  desktop.rs  lib_tests.rs
crates/galfus-protocol/: Cargo.toml
crates/galfus-protocol/src/: lib.rs
crates/galfus-realm-3d/: Cargo.toml
crates/galfus-realm-3d/src/: meta.rs  passes.rs  state.rs  sync.rs  tests.rs
crates/galfus-render/: Cargo.toml
crates/galfus-render/src/: bind_group_layouts.rs  cache.rs  graph.rs  graph_fallbacks.rs  graph_tests.rs  layouts.rs  lib.rs  library.rs  material_shader.rs  profiler.rs  realm_policy.rs  realm_policy_tests.rs  render_bootstrap.rs  render_bootstrap_tests.rs  resource_init.rs  samplers.rs  shader_dsl.rs  shader_dsl_tests.rs  shaders.rs  target.rs  ui_actions.rs  ui_actions_tests.rs  validation_tests.rs
crates/galfus-render/src/realm_planner/: auto_graph.rs  auto_graph_sync.rs  common.rs  compose.rs  mod.rs  targets.rs  tests.rs
crates/vulfram-audio/: Cargo.toml
crates/vulfram-audio/src/: contracts.rs  lib.rs  sync.rs
crates/vulfram-audio/src/backends/: webaudio.rs
crates/vulfram-bindings-lua/: Cargo.toml
crates/vulfram-bindings-lua/src/: lib.rs
crates/vulfram-bindings-napi/: Cargo.toml
crates/vulfram-bindings-napi/src/: lib.rs
crates/vulfram-bindings-python/: Cargo.toml
crates/vulfram-bindings-python/src/: lib.rs
crates/vulfram-bindings-wasm/: Cargo.toml
crates/vulfram-bindings-wasm/src/: lib.rs
crates/vulfram-demo/: Cargo.toml
crates/vulfram-demo/src/: app.rs
crates/vulfram-demo/src/demo/: assets.rs  commands.rs  hud.rs  io.rs  loop_utils.rs  mod.rs  scenarios.rs  session.rs
crates/vulfram-demo/src/demo/scenarios/: demo3_pointer.rs  mod.rs  pointer_listener_lab.rs  pointer_listener_lab_ui.rs  scenario_001_frame_graph.rs  setup.rs  window_ui.rs
crates/vulfram-demo/src/demo/scenarios/setup/: setup_cases.rs  setup_cases_tail.rs
crates/vulfram-input/: Cargo.toml
crates/vulfram-input/src/: builders.rs  cache.rs  cache_tests.rs  gamepad.rs  keycodes.rs  lib.rs  lib_tests.rs
crates/vulfram-platform/: Cargo.toml
crates/vulfram-platform/src/: bootstrap.rs  browser.rs  browser_tests.rs  desktop.rs  gamepad.rs  lib.rs  window.rs  window_tests.rs
crates/vulfram-protocol/: Cargo.toml
crates/vulfram-protocol/src/: lib.rs  lib_tests.rs
crates/vulfram-render/: Cargo.toml
crates/vulfram-render/src/: bind_group_layouts.rs  cache.rs  fallbacks.rs  graph.rs  graph_fallbacks.rs  graph_tests.rs  layouts.rs  lib.rs  library.rs  material_shader.rs  realm_planner.rs  realm_policy.rs  realm_policy_tests.rs  render_bootstrap.rs  render_bootstrap_tests.rs  resource_init.rs  shader_dsl.rs  shader_dsl_tests.rs  shaders.rs  target.rs  ui_actions.rs  validation.rs  validation_tests.rs  window_state_map.rs
crates/vulfram-render/src/realm_planner/: auto_graph.rs  auto_graph_sync.rs  common.rs  compose.rs  mod.rs  targets.rs  tests.rs
crates/vulfram-runtime/: Cargo.toml
crates/vulfram-runtime/src/: bootstrap.rs  lib.rs  lib_tests.rs
crates/vulfram-runtime/src/core/: cmd.rs  lifecycle.rs  mod.rs  queue.rs  queue_tests.rs  singleton.rs  state.rs  tick.rs  time.rs
crates/vulfram-runtime/src/core/audio/: mod.rs
crates/vulfram-runtime/src/core/audio/cmd/: listener.rs  mod.rs  resource.rs  source.rs  state.rs
crates/vulfram-runtime/src/core/cmd/processing/: defer.rs  dispatch.rs  engine.rs  error_events.rs  response_maps.rs  tests.rs
crates/vulfram-runtime/src/core/input/: keycodes.rs  keycodes_tests.rs  listeners.rs  listeners_tests.rs  mod.rs  raycast.rs  raycast_tests.rs  routing.rs  state.rs
crates/vulfram-runtime/src/core/input/listeners/: cmd.rs  emit.rs  model.rs  store.rs
crates/vulfram-runtime/src/core/input/routing/: route_cache.rs  route_events.rs  route_hit.rs  route_hit_tests.rs
crates/vulfram-runtime/src/core/platform/: native.rs  web.rs
crates/vulfram-runtime/src/core/profiling/: metrics.rs  mod.rs  process_tests.rs
crates/vulfram-runtime/src/core/profiling/cmd/: mod.rs  mod_tests.rs
crates/vulfram-runtime/src/core/realm/: graph.rs  graph_tests.rs  lifecycle.rs  mod.rs  report.rs  report_tests.rs  state.rs
crates/vulfram-runtime/src/core/realm/cmd/: realm.rs  render_graph.rs  render_graph_tests.rs  types.rs
crates/vulfram-runtime/src/core/render/: cache.rs  debug_capture.rs  frame_helpers.rs  frame_helpers_tests.rs  graph_execute.rs  mod.rs  realm_graph.rs  scene_sync.rs  ui_platform_actions.rs
crates/vulfram-runtime/src/core/render/passes/: utils.rs
crates/vulfram-runtime/src/core/render/state/: collector.rs  library.rs  lifecycle.rs  mod.rs
crates/vulfram-runtime/src/core/resources/: common.rs  list.rs
crates/vulfram-runtime/src/core/resources/camera/: cmd.rs  spec.rs
crates/vulfram-runtime/src/core/resources/environment/: cmd.rs  cmd_tests.rs  spec.rs
crates/vulfram-runtime/src/core/resources/geometry/: cmd.rs  primitives.rs
crates/vulfram-runtime/src/core/resources/light/: cmd.rs  spec.rs
crates/vulfram-runtime/src/core/resources/material/: spec.rs
crates/vulfram-runtime/src/core/system/: diagnostics.rs  diagnostics_tests.rs  events.rs  log.rs  notification.rs
crates/vulfram-runtime/src/core/ui/: bench.rs  bench_tests.rs  image_async.rs  image_async_tests.rs  input.rs  input_keymap.rs  paint.rs
crates/vulfram-runtime/src/core/window/: mod.rs  state.rs
crates/vulfram-ui/: Cargo.toml
crates/vulfram-ui/src/: contracts.rs  lib.rs  state.rs
(+772 files in other folders)
