[workspace]
members = [
    "crates/vulfram-audio",
    "crates/vulfram-bindings-ffi",
    "crates/vulfram-bindings-lua",
    "crates/vulfram-bindings-napi",
    "crates/vulfram-bindings-python",
    "crates/vulfram-bindings-wasm",
    "crates/vulfram-demo",
    "crates/vulfram-input",
    "crates/vulfram-platform",
    "crates/vulfram-protocol",
    "crates/vulfram-realm-2d",
    "crates/vulfram-realm-3d",
    "crates/vulfram-realm-ui",
    "crates/vulfram-render",
    "crates/vulfram-runtime",
    "crates/vulfram-realm-core",
    "crates/vulfram-types",
]
resolver = "3"

[workspace.package]
version = "0.21.2-alpha"
edition = "2024"
license = "MIT"

[package]
name = "vulfram-devtools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vulfram-runtime = { path = "crates/vulfram-runtime", default-features = false }
naga = { version = "28.0.0", features = ["wgsl-in"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "devtools/src/lib.rs"

[[bin]]
name = "wgsl_check"
path = "devtools/src/bin/wgsl_check.rs"

[features]
default = ["napi"]  # Default to N-API export
ffi = ["vulfram-runtime/ffi"]
napi = ["vulfram-runtime/napi"]
lua = ["vulfram-runtime/lua"]
python = ["vulfram-runtime/python"]
wasm = ["vulfram-runtime/wasm"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
