[workspace]
members = [
    "crates/vulfram-audio",
    "crates/vulfram-bindings-ffi",
    "crates/vulfram-bindings-lua",
    "crates/vulfram-bindings-napi",
    "crates/vulfram-bindings-python",
    "crates/vulfram-bindings-wasm",
    "crates/vulfram-devtools",
    "crates/vulfram-demo",
    "crates/vulfram-input",
    "crates/vulfram-platform",
    "crates/vulfram-protocol",
    "crates/vulfram-realm-2d",
    "crates/vulfram-realm-3d",
    "crates/vulfram-realm-ui",
    "crates/vulfram-render",
    "crates/vulfram-runtime",
    "crates/vulfram-realm-core",
    "crates/vulfram-types",
]
default-members = ["crates/vulfram-demo"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"


