[workspace]
members = [
    "crates/galfus-audio",
    "crates/galfus-bindings-ffi",
    "crates/galfus-bindings-lua",
    "crates/galfus-bindings-napi",
    "crates/galfus-bindings-python",
    "crates/galfus-bindings-wasm",
    "crates/galfus-devtools",
    "crates/galfus-demo",
    "crates/galfus-input",
    "crates/galfus-log",
    "crates/galfus-platform",
    "crates/galfus-protocol",
    "crates/galfus-realm-2d",
    "crates/galfus-realm-3d",
    "crates/galfus-render",
    "crates/galfus-runtime",
    "crates/galfus-realm-core",
    "crates/galfus-types",
]
default-members = ["crates/galfus-demo"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
