[package]
name = "galfus-bindings-lua"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "module"] }
galfus-core = { package = "galfus-runtime", path = "../galfus-runtime", default-features = false, features = ["lua"] }
