[package]
name = "galfus-bindings-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.8"
napi-derive = "3.5"
galfus-core = { package = "galfus-runtime", path = "../galfus-runtime", default-features = false, features = ["napi"] }
