[package]
name = "galfus-bindings-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
galfus-core = { package = "galfus-runtime", path = "../galfus-runtime", default-features = false, features = ["python"] }
