[package]
name = "galfus-input"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
galfus-realm-core = { path = "../galfus-realm-core" }
galfus-types = { path = "../galfus-types" }

[dev-dependencies]
rmp-serde = "1.3"
serde_json = "1.0"
