[package]
name = "galfus-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = "1.24"
egui = "0.29"
glam = { version = "0.30", features = ["serde"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
naga = { version = "28.0.0", features = ["wgsl-in"] }
wgpu = "28.0"
galfus-platform = { path = "../galfus-platform" }
galfus-realm-2d = { path = "../galfus-realm-2d" }
galfus-realm-3d = { path = "../galfus-realm-3d" }
galfus-protocol = { path = "../galfus-protocol" }
galfus-realm-core = { path = "../galfus-realm-core" }
