[package]
name = "vulfram-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = "0.9"
mint = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioDestinationNode",
    "AudioListener",
    "AudioParam",
    "GainNode",
    "PannerNode",
    "PannerOptions",
] }
