[package]
name = "vulfram-bindings-lua"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "module"] }
vulfram-core = { path = "../..", default-features = false, features = ["lua"] }
