[package]
name = "vulfram-bindings-lua"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "module"] }
vulfram-core = { package = "vulfram-runtime", path = "../vulfram-runtime", default-features = false, features = ["lua"] }
