[package]
name = "vulfram-bindings-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
vulfram-core = { path = "../..", default-features = false, features = ["python"] }
