[package]
name = "vulfram-demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = "1.25"
glam = { version = "0.30", features = ["serde", "bytemuck", "encase"] }
rmp-serde = "1.3"
vulfram-core = { package = "vulfram-runtime", path = "../vulfram-runtime", default-features = false, features = ["ffi"] }
