[package]
name = "vulfram-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = "0.30"
log = "0.4"
vulfram-input = { path = "../vulfram-input" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.11"
winit = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Gamepad", "GamepadButton"] }
