[package]
name = "vulfram-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { version = "0.30", features = ["serde"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
vulfram-types = { path = "../vulfram-types" }

[dev-dependencies]
serde_json = "1.0"
