[package]
name = "vulfram-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
egui = "0.29"
glam = { version = "0.30", features = ["serde"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
vulfram-protocol = { path = "../vulfram-protocol" }
vulfram-scene-core = { path = "../vulfram-scene-core" }
