[package]
name = "vulfram-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = "1.24"
egui = "0.29"
glam = { version = "0.30", features = ["serde"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
wgpu = "28.0"
vulfram-platform = { path = "../vulfram-platform" }
vulfram-realm-2d = { path = "../vulfram-realm-2d" }
vulfram-realm-3d = { path = "../vulfram-realm-3d" }
vulfram-protocol = { path = "../vulfram-protocol" }
vulfram-realm-core = { path = "../vulfram-realm-core" }
