[package]
name = "vulfram-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
env_logger = "0.11"
log = "0.4"
once_cell = "1.21"
pollster = "0.4"
smallvec = "1.15"
bytemuck = "1.25"
encase = "0.12"
glam = { version = "0.30", features = ["serde", "bytemuck", "encase"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
wgpu = "28.0"
winit = { version = "0.30", optional = true }
ctrlc = { version = "3.5", optional = true }
gilrs = { version = "0.11", optional = true }
notify-rust = { version = "4.12", optional = true }
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif", "exr", "hdr", "ico"] }
half = "2.7"
rand = "0.9.2"
mint = "0.5"
vulfram-platform = { path = "../vulfram-platform" }
vulfram-audio = { path = "../vulfram-audio" }
vulfram-input = { path = "../vulfram-input" }
vulfram-protocol = { path = "../vulfram-protocol" }
vulfram-realm-2d = { path = "../vulfram-realm-2d" }
vulfram-realm-3d = { path = "../vulfram-realm-3d" }
vulfram-render = { path = "../vulfram-render" }
vulfram-realm-core = { path = "../vulfram-realm-core" }
vulfram-types = { path = "../vulfram-types" }

js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-time = { version = "1.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "AddEventListenerOptions",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "DomRect",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "CompositionEvent",
    "PointerEvent",
    "WheelEvent",
    "FocusEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "MouseEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioDestinationNode",
    "AudioListener",
    "AudioParam",
    "GainNode",
    "PannerNode",
    "PannerOptions",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["napi"]
ffi = ["dep:winit", "dep:gilrs", "dep:notify-rust", "dep:ctrlc"]
napi = ["ffi"]
lua = ["ffi"]
python = ["ffi"]
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
    "dep:web-time",
    "dep:js-sys",
    "dep:web-sys",
]
