[package]
name = "vulfram-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
vulfram-input = { path = "../vulfram-input" }
vulfram-types = { path = "../vulfram-types" }

[dev-dependencies]
serde_json = "1.0"
